# ai-agent-workflow-automation

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/data/: seed.py
backend/app/graph/: graph.py  state.py
backend/app/graph/nodes/: draft.py  enrich.py  qualify.py  research.py
backend/app/llm/: prompts.py  provider.py
backend/app/tools/: fetch.py  websearch.py
backend/tests/: test_graph.py  test_nodes.py  test_provider.py  test_schemas.py  test_websearch.py
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/research/: route.ts
frontend/components/: CompanyForm.tsx  CompanyProfileCard.tsx  EmailDraftCard.tsx  KeyPeopleList.tsx  PipelineProgress.tsx  QualificationPanel.tsx
frontend/components/ui/: button.tsx
frontend/lib/: api.ts  config.ts  types.ts  utils.ts
