[project]
name = "lead-researcher-backend"
version = "0.1.0"
description = "AI Sales Lead Researcher — multi-agent backend (LangGraph)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "anthropic>=0.39.0",
    "ollama>=0.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
